package mysite.core.member;

public enum Grade {
    BASIC,
    VIP
}
